Re-design: Re-aligned timer and text resizer with question counter Fixed: lock image over sizing

--- a/examOperations.sass
+++ b/examOperations.sass
@@ -16,28 +16,8 @@ html
                 font-family: hoss-round-xnarrow, sans-serif
                 font-weight: 600
                 font-size: 1.1em
-                .question-counter-container
-                    height: 90%
-                    width: 30%
-                    border-radius: 10px
-                    background-color: #d4c299
-                    display: flex
-                    justify-content: center
-                    align-items: center
-                    gap: 5px
-                .timer
-                    display: flex
-                    justify-content: center
-                    align-items: center
-                    height: 100%
-                    width: 100px
-                    background-color: #d4c299
-                    border-radius: 10px
-                    font-size: 1.4em
-                    transition: color 3s ease
-                    color: rgb(23, 130, 25)
                 .question-text-resize-input-container
-                    height: 100%
+                    height: 90%
                     width: 30%
                     display: flex
                     justify-content: center
@@ -47,6 +27,26 @@ html
                     .question-text-resize-input
                         height: 100%
                         width: 80%
+                .timer
+                    display: flex
+                    justify-content: center
+                    align-items: center
+                    height: 90%
+                    width: 100px
+                    background-color: #d4c299
+                    border-radius: 10px
+                    font-size: 1.4em
+                    transition: color 3s ease
+                    color: rgb(23, 130, 25)
+                .question-counter-container
+                    height: 90%
+                    width: 30%
+                    border-radius: 10px
+                    background-color: #d4c299
+                    display: flex
+                    justify-content: center
+                    align-items: center
+                    gap: 5px
             .question-container
                 position: relative
                 margin-inline: auto
@@ -127,7 +127,7 @@ html
                                 justify-content: center
                                 align-items: center
                                 img
-                                    width: 60%                        
+                                    width: max(30%, 135px)
                                 .hide
                                     display: none !important                            
                 .choices-container
